# advent-of-code

./: .gitattributes  Cargo.toml
.git-crypt/keys/default/0/: 1397337CB0F00E44173499FC6468A4044DC5AFB9.gpg
2020/: Cargo.toml
2020/input/: 01.txt  02.txt  03.txt  example-01.txt  example-02.txt  example-03.txt
2021/src/: input20b.txt
2022/: Cargo.toml
2024/: Cargo.toml
2024/benches/: my_benchmark.rs
2024/input/: 01.txt  02.txt  03.txt  04.txt  05.txt  06.txt  07.txt  08.txt  09.txt  10.txt  11.txt  12.txt  13.txt  14.txt  15.txt  16.txt  17.txt  18.txt  19.txt  20.txt  21.txt  22.txt  23.txt  24.txt  25.txt  example-01.txt  example-02.txt  example-03.txt  example-04.txt  example-05.txt  example-06.txt  example-07.txt  example-08.txt  example-09.txt  example-10.txt  example-11.txt  example-12.txt  example-13.txt  example-14.txt  example-15.txt  (+10 more)
2024/src/: lib.rs
2025/: Cargo.toml
2025/input/: 01.txt  02.txt  03.txt  04.txt  05.txt  example-01.txt  example-02.txt  example-03.txt  example-04.txt  example-05.txt
bootstrap/: Cargo.toml
bootstrap/src/: lib.rs  main.rs
src/: input11.txt  input22b.txt
