[package]
name = "aoc2025"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "cookies", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
dirs = "4.0"
regex = { version = "1.3", features = ["std"], default-features = false }
criterion = { version = "0.5", features = ["html_reports"] }
num = "0.4.3"
num-complex = "0.4.6"
rayon = "1.10.0"
arboard = "3.4.1"
itertools = "0.10"
clap = { version = "4.0", features = ["derive"] }
